--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bitcoinjs-lib": "https://github.com/dabura667/bitcoinjs-lib.git#bcash330",
     "bitcoinjs-message": "^2.0.0",
     "body-parser": "^1.18.3",
+    "csv-parse": "^2.5.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
