--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "chai": "2.2.0",
     "istanbul": "0.3.13",
-    "mocha": "2.2.4",
+    "mocha": "^5.2.0",
+    "should": "^13.2.1",
     "supertest": "0.15.0",
     "supertest-as-promised": "2.0.2"
   },
