update node-jsrender to jsrender for node

--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "bitcoinjs-message": "^2.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsrender": "^0.9.90",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mongoose": "^5.2.4",
     "mongoose-q": "^0.1.0",
     "morgan": "^1.9.0",
-    "node-jsrender": "^1.0.9",
     "nodemailer": "^4.6.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "prompt-sync": "^4.1.6",
