--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "argparse": "^1.0.10",
     "bitcoinjs-message": "^2.0.0",
+    "bitgo-utxo-lib": "^1.1.2",
     "body-parser": "^1.18.3",
     "csv-parse": "^2.5.0",
     "express": "^4.16.3",
