--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "argparse": "^1.0.10",
+    "bignumber.js": "^7.2.1",
     "bitcoinjs-message": "^2.0.0",
     "bitgo-utxo-lib": "^1.1.2",
     "body-parser": "^1.18.3",
     "csv-parse": "^2.5.0",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "jsrender": "^0.9.90",
     "lodash": "^4.17.10",
