--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Key service implementing KRS protocol to provision xpubs for backup use",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive",
+    "test": "./node_modules/.bin/_mocha -- --timeout 20000 --recursive test/",
     "start": "node bin/server.js"
   },
   "license": "MIT",
   "devDependencies": {
     "chai": "2.2.0",
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "should": "^13.2.1",
     "supertest": "^3.1.0"
@@ -18,6 +17,7 @@
   "dependencies": {
     "argparse": "^1.0.10",
     "bitcoinjs-message": "^2.0.0",
+    "bitgo-utxo-lib": "^1.1.2",
     "body-parser": "^1.18.3",
     "csv-parse": "^2.5.0",
     "express": "^4.16.3",
