--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ripple-hashes": "^0.3.1",
     "ripple-keypairs": "^0.10.1",
     "ripple-lib": "^1.0.0-beta.5",
+    "stellar-base": "^0.8.3",
     "superagent": "^3.8.3",
     "validator": "^10.4.0"
   }
