--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ripple-keypairs": "^0.10.1",
     "ripple-lib": "^1.0.0-beta.5",
     "stellar-base": "^0.8.3",
-    "stellar-hd-wallet": "0.0.8"
+    "stellar-hd-wallet": "0.0.8",
     "superagent": "^3.8.3",
     "validator": "^10.4.0"
   }
