--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "key-recovery-service-v2",
-  "version": "0.0.3",
-  "description": "Key service implementing KRS protocol to provision xpubs for backup use",
+  "version": "2.0.0",
+  "description": "Reference implementation of the Key Recovery Service protocol for dispensing public keys",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/_mocha -- --timeout 20000 --recursive test/",
+    "test": "./node_modules/mocha/bin/_mocha --timeout 20000 --recursive test/",
     "start": "node bin/server.js"
   },
   "license": "MIT",
@@ -12,22 +12,19 @@
     "chai": "2.2.0",
     "mocha": "^5.2.0",
     "should": "^13.2.1",
-    "supertest": "^3.1.0"
+    "supertest": "^3.3.0"
   },
   "dependencies": {
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
-    "bitcoinjs-message": "^2.0.0",
     "bitgo-utxo-lib": "^1.1.2",
     "body-parser": "^1.18.3",
-    "csv-parse": "^2.5.0",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "jsrender": "^0.9.90",
-    "lodash": "^4.17.10",
-    "moment": "^2.22.2",
-    "mongoose": "^5.2.5",
-    "morgan": "^1.9.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.2.17",
+    "morgan": "^1.9.1",
     "nodemailer": "^4.6.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "prompt-sync": "^4.1.6",
@@ -39,7 +36,6 @@
     "ripple-lib": "^1.0.0-beta.5",
     "stellar-base": "^0.8.3",
     "stellar-hd-wallet": "0.0.8",
-    "superagent": "^3.8.3",
-    "validator": "^10.4.0"
+    "superagent": "^3.8.3"
   }
 }
