--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
-    "bitgo-utxo-lib": "^1.1.2",
+    "bitgo-utxo-lib": "git+https://github.com/BitGo/bitgo-utxo-lib.git#2a71e6af83672c8d380e8868fbc819697cd59170",
     "body-parser": "^1.18.3",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
