only connect to database in admin.js if we are importing public keys (this is necessary so it can run without errors in an offline env). Also updated package.json

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
     "bitgo-utxo-lib": "git+https://github.com/BitGo/bitgo-utxo-lib.git#2a71e6af83672c8d380e8868fbc819697cd59170",
+    "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "jsrender": "^0.9.90",
     "lodash": "^4.17.11",
     "mongoose": "^5.2.17",
@@ -28,12 +31,18 @@
     "nodemailer": "^4.6.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "prompt-sync": "^4.1.6",
+    "prompt-sync-history": "^1.0.1",
     "prova-lib": "^0.2.9",
     "q": "^1.5.1",
+    "read": "^1.0.7",
+    "readline": "^1.3.0",
     "ripple-binary-codec": "^0.1.13",
     "ripple-hashes": "^0.3.1",
     "ripple-keypairs": "^0.10.1",
     "ripple-lib": "^1.0.0-beta.5",
+    "secrets": "^0.1.0",
+    "secrets.js-grempe": "^1.1.0",
+    "sjcl": "^1.0.7",
     "stellar-base": "^0.8.3",
     "stellar-hd-wallet": "0.0.8",
     "superagent": "^3.8.3"
