--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
     "ethereumjs-tx": "^1.3.7",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "fs": "0.0.1-security",
-    "jsrender": "^0.9.90",
+    "jsrender": "^0.9.91",
     "lodash": "^4.17.11",
-    "mongoose": "^5.2.17",
+    "mongoose": "^5.3.8",
     "morgan": "^1.9.1",
     "nodemailer": "^4.6.7",
     "nodemailer-smtp-transport": "^2.7.4",
@@ -36,11 +36,10 @@
     "q": "^1.5.1",
     "read": "^1.0.7",
     "readline": "^1.3.0",
-    "ripple-binary-codec": "^0.1.13",
+    "ripple-binary-codec": "^0.1.15",
     "ripple-hashes": "^0.3.1",
-    "ripple-keypairs": "^0.10.1",
-    "ripple-lib": "^1.0.0-beta.5",
-    "secrets": "^0.1.0",
+    "ripple-keypairs": "^0.10.2",
+    "ripple-lib": "^1.0.2",
     "secrets.js-grempe": "^1.1.0",
     "sjcl": "^1.0.7",
     "stellar-base": "^0.8.3",
