--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/_mocha --timeout 20000 --recursive test/",
-    "start": "node bin/server.js"
+    "start": "node -r dotenv/config bin/server.js"
   },
   "license": "MIT",
   "devDependencies": {
@@ -19,6 +19,7 @@
     "bignumber.js": "^7.2.1",
     "bitgo-utxo-lib": "^1.1.2",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "jsrender": "^0.9.90",
