--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
+    "bitcoinjs-message": "^2.0.0",
     "bitgo-utxo-lib": "^1.1.2",
     "body-parser": "^1.18.3",
     "ethereumjs-tx": "^1.3.7",
