--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bitgo-utxo-lib": "^1.2.1",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
+    "eosjs": "^16.0.9",
+    "eosjs-ecc": "^4.0.4",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.16.3",
     "jsrender": "^0.9.90",
