--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "supertest": "^3.3.0"
   },
   "dependencies": {
+    "@bitgo/account-lib": "^0.1.4",
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
     "bitcoinjs-message": "^2.0.0",
