Add Statics support
We were differentiating testnet vs mainnet coins based on whether they
start with a 't' before. This doesn't work anymore with TRON (symbol
trx), so instead we now use statics

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "dependencies": {
     "@bitgo/account-lib": "^0.1.4",
+    "@bitgo/statics": "^2.4.0",
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
     "bitcoinjs-message": "^2.0.0",
-    "bitgo": "^7.0.0-rc.0",
-    "bitgo-utxo-lib": "^1.2.1",
+    "bitgo": "^8.5.0",
+    "bitgo-utxo-lib": "^1.6.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "eosjs": "^16.0.9",
