--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eosjs": "^16.0.9",
     "eosjs-ecc": "^4.0.4",
     "ethereumjs-tx": "^1.3.7",
+    "ethereumjs-util": "6.2.0",
     "express": "^4.16.3",
     "jsrender": "^0.9.90",
     "lodash": "^4.17.11",
