--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Reference implementation of the Key Recovery Service protocol for dispensing public keys",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/_mocha --timeout 20000 --recursive test/",
+    "test": "./node_modules/mocha/bin/_mocha --exit --timeout 20000 --recursive test/",
     "start": "node -r dotenv/config bin/server.js",
     "lint": "./node_modules/.bin/eslint --ext .js .",
     "audit": "npm audit"
@@ -18,7 +18,7 @@
     "supertest": "^3.3.0"
   },
   "dependencies": {
-    "@bitgo/account-lib": "^1.0.2",
+    "@bitgo/account-lib": "1.1.0",
     "@bitgo/statics": "^3.4.2",
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
