BG-23533 Update dependencies

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "supertest": "^3.3.0"
   },
   "dependencies": {
-    "@bitgo/account-lib": "1.1.0",
+    "@bitgo/account-lib": "^2.0.2-rc.2",
     "@bitgo/statics": "^3.4.2",
     "argparse": "^1.0.10",
     "bignumber.js": "^7.2.1",
     "bitcoinjs-message": "^2.0.0",
-    "bitgo": "^10.0.0",
+    "bitgo": "^11.4.1-rc.8",
     "bitgo-utxo-lib": "^1.6.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
@@ -33,7 +33,7 @@
     "ethereumjs-util": "6.2.0",
     "express": "^4.16.3",
     "jsrender": "^0.9.90",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.19",
     "mongoose": "^5.2.17",
     "morgan": "^1.9.1",
     "nodemailer": "^4.6.7",
@@ -43,7 +43,7 @@
     "q": "^1.5.1",
     "ripple-binary-codec": "^0.1.13",
     "ripple-hashes": "^0.3.1",
-    "ripple-keypairs": "^0.10.1",
+    "ripple-keypairs": "^1.0.1",
     "ripple-lib": "^1.0.0-beta.5",
     "stellar-base": "^0.8.3",
     "stellar-hd-wallet": "0.0.10",
